# vndf-2020

./: .gitignore  Cargo.toml  README.md  compile-shaders.sh
vndf-client/: Cargo.toml
vndf-client/src/: camera.rs  config.rs  draw.rs  frontend.rs  frontends.rs  game.rs  graphics.rs  input.rs  lib.rs  main.rs  net.rs  state.rs  transforms.rs  ui.rs
vndf-client/src/frontend/: bespoke.rs  drawables.rs  drawers.rs  ggez.rs  input_handler.rs  meshes.rs  mod.rs  renderer.rs  shaders.rs  ui.rs  uniforms.rs  window.rs
vndf-client/src/frontend/drawables/: mod.rs  standard.rs  text.rs
vndf-client/src/frontend/drawers/: background.rs  explosion.rs  grid.rs  mod.rs  orbit.rs  planet.rs  ship.rs
vndf-client/src/frontend/renderer/: background.rs  drawers.rs
vndf-client/src/frontend/ui/: anchor.rs  basic.rs  conrod.rs  element.rs  elements.rs  input.rs  layout.rs  mod.rs  origin.rs  traits.rs  widgets.rs
vndf-client/src/frontends/: bespoke.rs  ggez.rs  input_handler.rs  shaders.rs
vndf-client/src/frontends/bespoke/: drawable.rs  drawables.rs  input_handler.rs  meshes.rs  renderer.rs  shaders.rs  uniforms.rs  window.rs
vndf-client/src/frontends/ggez/: draw.rs  graphics.rs  transforms.rs
vndf-client/src/game/: camera.rs  config.rs  coords.rs  entities.rs  input.rs  mod.rs  state.rs  transforms.rs
vndf-client/src/game/components/: body.rs  engine.rs  ship.rs
vndf-client/src/game/net/: input.rs
vndf-client/src/game/systems/: input.rs
vndf-client/src/graphics/: elements.rs  math.rs  mod.rs  model.rs  screen.rs  transforms.rs  ui.rs  vertices.rs
vndf-client/src/state/components/: engine.rs  explosion.rs  ship.rs
vndf-client/src/state/systems/: input.rs  update.rs
vndf-shared/: Cargo.toml
vndf-shared/src/: action.rs  cgs.rs  data.rs  ecs.rs  events.rs  game.rs  input.rs  lib.rs  main_loop.rs  math.rs  net.rs  server.rs  world.rs
vndf-shared/src/cgs/: secondary_store.rs  store.rs
vndf-shared/src/game/: base.rs  components.rs  crafts.rs  entities.rs  events.rs  explosions.rs  features.rs  health.rs  in_event.rs  indices.rs  loot.rs  orbits.rs  out_event.rs  physics.rs  planet.rs  planets.rs  players.rs  ships.rs  systems.rs
vndf-shared/src/game/base/: events.rs  feature.rs
vndf-shared/src/game/components/: body.rs  craft.rs  engine.rs  explosion.rs  missile.rs  player.rs  ship.rs
vndf-shared/src/game/crafts/: components.rs  feature.rs  systems.rs
vndf-shared/src/game/explosions/: components.rs  entities.rs  events.rs  feature.rs  systems.rs
vndf-shared/src/game/features/: base.rs  basics.rs  entities.rs  explosions.rs  explosive.rs  health.rs  missiles.rs  players.rs  ships.rs
vndf-shared/src/game/health/: components.rs  events.rs  feature.rs  systems.rs
vndf-shared/src/game/loot/: components.rs  feature.rs  systems.rs
vndf-shared/src/game/missiles/: components.rs  entities.rs  events.rs  feature.rs  systems.rs
vndf-shared/src/game/physics/: components.rs  feature.rs  systems.rs
vndf-shared/src/game/planet/: components.rs  feature.rs  systems.rs
vndf-shared/src/game/planets/: components.rs  feature.rs  systems.rs
vndf-shared/src/game/players/: components.rs  events.rs  feature.rs  systems.rs
vndf-shared/src/game/ships/: components.rs  entities.rs  feature.rs  systems.rs
vndf-shared/src/game/systems/: crafts.rs  explosions.rs  input.rs  missiles.rs  players.rs  ships.rs  update.rs
vndf-shared/src/math/: integration.rs
vndf-shared/src/net/: client.rs  conn.rs  data.rs  error.rs  game.rs  message.rs  mod.rs  msg.rs  network.rs  result.rs  server.rs
vndf-shared/src/world/: behavior.rs  math.rs  mod.rs  orbits.rs  players.rs
vndf-shared/src/world/behavior/: base.rs  orbits.rs  planets.rs  ships.rs
vndf-shared/src/world/crafts/: components.rs  systems.rs
vndf-shared/src/world/explosions/: components.rs  entities.rs  feature.rs
vndf-shared/src/world/features/: mod.rs  orbits.rs
vndf-shared/tests/: net.rs
(+204 files in other folders)
