[workspace]
members = [
    "rinnsal",
    "toadster",
    "vndf-client",
    "vndf-launcher",
    "vndf-server",
    "vndf-shared",
    "vndf-tests",
]
default-members = [
    "rinnsal",
    "toadster",
    "vndf-client",
    "vndf-shared",
    "vndf-tests",
]

[profile.dev.package."*"]
opt-level = 3
