[workspace]
members = [
    "rinnsal",
    "toadster",
    "vndf-client",
    "vndf-launcher",
    "vndf-macros",
    "vndf-server",
    "vndf-shared",
    "vndf-tests",
]
default-members = [
    "rinnsal",
    "toadster",
    "vndf-client",
    "vndf-macros",
    "vndf-shared",
    "vndf-tests",
]

[profile.dev.package."*"]
opt-level = 3
