[package]
name    = "vndf-client"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"


[dependencies]
conrod_core = "*"
conrod_wgpu = "*"
futures     = "*"
log         = "*"
lyon        = "*"
rusttype    = "*"
serde       = "*"
time        = "*"
toml        = "*"
wgpu        = "*"
wgpu_glyph  = "*"
winit       = "*"
zerocopy    = "*"

[dependencies.euclid]
version  = "*"
features = ["mint"]

[dependencies.toadster]
path = "../toadster"

[dependencies.vndf-macros]
path = "../vndf-macros"

[dependencies.vndf-shared]
path = "../vndf-shared"
