[package]
name    = "vndf-client"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"


[dependencies]
futures    = "*"
log        = "*"
lyon       = "*"
rusttype   = "0.8.3" # needs to match `conrod_core` and `glyph_brush`
serde      = "*"
time       = "*"
toml       = "*"
wgpu       = "*"
wgpu_glyph = "*"
winit      = "*"
zerocopy   = "*"

[dependencies.euclid]
version  = "*"
features = ["mint"]

[dependencies.toadster]
path = "../toadster"

[dependencies.vndf-macros]
path = "../vndf-macros"

[dependencies.vndf-shared]
path = "../vndf-shared"
