[package]
name    = "vndf-client"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"


[dependencies]
futures     = "*"
glyph_brush = "*"
log         = "*"
lyon        = "*"
serde       = "*"
time        = "*"
toml        = "*"
wgpu        = "0.5.2" # need to use the same as `wgpu_glyph`
wgpu_glyph  = "*"
winit       = "*"
zerocopy    = "*"

[dependencies.euclid]
version  = "*"
features = ["mint"]

[dependencies.toadster]
path = "../toadster"

[dependencies.vndf-macros]
path = "../vndf-macros"

[dependencies.vndf-shared]
path = "../vndf-shared"
