[package]
name    = "vndf-shared"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"


[dependencies]
log      = "*"
postcard = "*"
rand     = "*"
serde    = "*"

[dependencies.cgmath]
version  = "*"
features = ["mint", "serde"]

[dependencies.vndf-events]
path = "../vndf-events"

[dependencies.pid]
version  = "*"
features = ["serde"]

[dependencies.slotmap]
version  = "*"
features = ["serde"]
