[package]
name    = "vndf-shared"
version = "0.1.0"
authors = ["Hanno Braun <hb@hannobraun.de>"]
edition = "2018"


[dependencies]
euclid   = "*"
log      = "*"
postcard = "*"
rand     = "*"
serde    = "*"

[dependencies.cgmath]
version  = "*"
features = ["mint", "serde"]

[dependencies.pid]
version  = "*"
features = ["serde"]

[dependencies.rinnsal]
path = "../rinnsal"

[dependencies.toadster]
path = "../toadster"
